--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,18 +36,12 @@ maintainers = [
     {email = "jamesbraza@gmail.com", name = "James Braza"},
     {email = "white.d.andrew@gmail.com", name = "Andrew White"},
 ]
-name = "paper-qa"
-readme = "README.md"
-requires-python = ">=3.8"
-urls = {repository = "https://github.com/whitead/paper-qa"}
-version = "4.7.0"
 
 [tool.poetry]
 name = "q-a-system"
 version = "0.2.0"
-description = "Your project description"
 authors = [
-    {"mauricio987650@gmail.com Mauricio Avila Sesa"},
+    {"Mauricio Avila Sesa <mauricio987650@gmail.com>"}
 ]
 
 [tool.codespell]
